@@ -744,6 +744,7 @@ DEF_INVALID_EXEC(eval_frame_with_cleanup)
 DEF_INVALID_EXEC(channel_seq_callback)
 DEF_INVALID_EXEC(slp_restore_exception)
 DEF_INVALID_EXEC(slp_restore_tracing)
+DEF_INVALID_EXEC(slp_tp_init_callback)
 
 static PyTypeObject wrap_PyFrame_Type;
 
@@ -1126,6 +1127,8 @@ static int init_frametype(void)
                              slp_restore_exception, REF_INVALID_EXEC(slp_restore_exception))
         || slp_register_execute(&PyCFrame_Type, "slp_restore_tracing",
                              slp_restore_tracing, REF_INVALID_EXEC(slp_restore_tracing))
+        || slp_register_execute(&PyCFrame_Type, "slp_tp_init_callback",
+                             slp_tp_init_callback, REF_INVALID_EXEC(slp_tp_init_callback))
         || init_type(&wrap_PyFrame_Type, initchain);
 }
 #undef initchain
