@@ -9,6 +9,13 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://bitbucket.org/stackless-dev/stackless/issues/94
+  Calls to __init__(self, ...) are now stackless, if
+  soft-switching is enabled.
+  Note: pickling and unpickling an object while its __init__() method runs,
+  may cause unexpected interactions between the object reconstruction and the
+  remaining part of __init__().
+
 - https://bitbucket.org/stackless-dev/stackless/issues/98
   Prevent an unlikely NULL-pointer access in safe_pickle.c pickle_callback().
   The bug is very old and might affect multiprocessing.
